@@ -201,3 +201,7 @@ DbCommand.createDbCommand = function(db, command_hash, options) {
 DbCommand.createAdminDbCommand = function(db, command_hash) {
   return new DbCommand(db, "admin." + DbCommand.SYSTEM_COMMAND_COLLECTION, QueryCommand.OPTS_NO_CURSOR_TIMEOUT, 0, -1, command_hash, null);
 };
+
+DbCommand.createDbSlaveOkCommand = function(db, command_hash, options) {
+  return new DbCommand(db, db.databaseName + "." + DbCommand.SYSTEM_COMMAND_COLLECTION, QueryCommand.OPTS_NO_CURSOR_TIMEOUT | QueryCommand.OPTS_SLAVE, 0, -1, command_hash, null, options);
+};
